--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -6,6 +6,7 @@
     xmlns:expandableTextView="http://schemas.android.com/tools">
 
     <RelativeLayout
+        android:id="@+id/liov_lay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -33,9 +34,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/liov_head"
-            android:textColor="@color/black"
             android:ellipsize="end"
-            android:maxLines="1"/>
+            android:maxLines="1"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/liov_time"
@@ -56,7 +57,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:visibility="gone"
-            app:etv_MaxLinesOnShrink="3"/>
+            app:etv_MaxLinesOnShrink="3" />
 
         <ImageView
             android:id="@+id/liov_share_img"
