--- a/app/src/main/res/layout/widget_article_header.xml
+++ b/app/src/main/res/layout/widget_article_header.xml
@@ -12,15 +12,16 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
-        android:textColor="@color/gray_44" />
+        android:textColor="@color/gray_44"
+        android:textStyle="bold"/>
 
     <cn.luern0313.wristbilibili.widget.AutoLineLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="23dp"
+        android:paddingLeft="25dp"
         android:paddingTop="4dp"
-        android:paddingRight="23dp"
+        android:paddingRight="25dp"
         android:paddingBottom="4dp">
 
         <TextView
@@ -64,15 +65,16 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/article_article_bt_cover"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="2dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:descendantFocusability="blocksDescendants"
                 android:gravity="center_horizontal"
-                android:onClick="clickArticleCover"
                 android:orientation="vertical"
                 android:padding="3dp">
 
@@ -92,19 +94,20 @@
 
 
             <LinearLayout
+                android:id="@+id/article_article_bt_like"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:descendantFocusability="blocksDescendants"
                 android:gravity="center_horizontal"
-                android:onClick="clickArticleLike"
                 android:orientation="vertical"
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/article_article_bt_like"
+                    android:id="@+id/article_article_bt_like_img"
                     android:layout_width="38dp"
                     android:layout_height="38dp"
                     android:src="@drawable/icon_vdd_do_like_no" />
@@ -121,19 +124,20 @@
 
 
             <LinearLayout
+                android:id="@+id/article_article_bt_coin"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:descendantFocusability="blocksDescendants"
                 android:gravity="center_horizontal"
-                android:onClick="clickArticleCoin"
                 android:orientation="vertical"
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/article_article_bt_coin"
+                    android:id="@+id/article_article_bt_coin_img"
                     android:layout_width="38dp"
                     android:layout_height="38dp"
                     android:src="@drawable/icon_vdd_do_coin_no" />
@@ -150,19 +154,20 @@
 
 
             <LinearLayout
+                android:id="@+id/article_article_bt_fav"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:descendantFocusability="blocksDescendants"
                 android:gravity="center_horizontal"
-                android:onClick="clickArticleFav"
                 android:orientation="vertical"
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/article_article_bt_fav"
+                    android:id="@+id/article_article_bt_fav_img"
                     android:layout_width="38dp"
                     android:layout_height="38dp"
                     android:src="@drawable/icon_vdd_do_fav_no" />
@@ -178,14 +183,15 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/article_article_bt_share"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:descendantFocusability="blocksDescendants"
                 android:gravity="center_horizontal"
-                android:onClick="clickArticleShare"
                 android:orientation="vertical"
                 android:padding="3dp">
 
