--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -8,9 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/alpha"
-        android:dividerHeight="0dp"
-        android:paddingBottom="28dp"
-        android:clipToPadding="false"/>
+        android:dividerHeight="0dp"/>
 
     <LinearLayout
         android:id="@+id/article_article_loading"
